DBJR-188: fixed color of voting links in follow-up timeline so the links are now visible

--- a/www/less/_temp_followUp.less
+++ b/www/less/_temp_followUp.less
@@ -64,6 +64,10 @@ top: 0;
   width: 280px;
   position: relative;
   margin: 0 0 10px 0;
+
+    a.voting {
+        color: @bodyText;
+    }
 }
 #followup .col .timeline-box h3 {
   font-size: 0.9em;
